<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_Summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipping_Cream">Whipping Cream</string>
    <string name="chocalate">Chocolate</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you</string>
</resources>
